--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,9 @@ crate-type = ["staticlib"]
 
 [dependencies]
 rlibc = "0.1.4"
+
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
